<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Travis</string>
    <string name="empty"></string>
    <string name="taxi">Taxi</string>
    <string name="client">Client</string>
    <string name="users">users</string>
    <string name="rated_by_X">rated by</string>

    <!-- Facebook app id -->
    <string name="app_id">657569694292796</string>

    <!-- TransitionViewPager -->
    <string-array name="effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>

    <string name="no_wifi">Please connect to wifi.</string>

    <!-- Dialog strings -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="start_travel">Start travel to origin</string>
    <string name="cancel_ride">Cancel ride</string>
    <string name="loading">Loading…</string>


    <!-- Login strings -->
    <string name="auto_login">Automatically login every time</string>
    <string name="login">Login</string>
    <string name="start_using_travis">Start using Travis</string>
    <string name="login_error">Invalid login!</string>
    <string name="unknown_address">Not set</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login or sign up</string>
    <string name="state_success">Success</string>
    <string name="state_logging_in">Logging in…</string>
    <string name="state_login_failed">Login failed</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short (min. 3 characters)</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>


    <!-- Sign up strings -->
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="pick_a_photo">Pick a Photo</string>
    <string name="pick_another_photo">Pick another Photo</string>
    <string name="register_ok">Registered successfully!</string>
    <string name="welcome_text1">Welcome to Travis!</string>
    <string name="welcome_text2">It looks like you are a new user.
Before you start using Travis, please insert your name …</string>
    <string name="welcome_text2_alt">It looks like you are a new user.
Before you start using Travis, please confirm name below…</string>
    <string name="welcome_text3">Now pick a good photo for your profile. Make sure you are smiling! :)</string>
    <string name="welcome_text3_alt">Now confirm if the photo below is good for your profile. Make sure you are smiling! :)</string>
    <string name="welcome_text4">Finally, pick what type of user you are by tapping one of the two icons below…</string>
    <string name="photo_required">Please choose a photo for your profile.</string>
    <string name="type_required">Please choose an account type.</string>
    <string name="picked_account_taxi">As a Taxi you will receive ride requests from Clients.</string>
    <string name="picked_account_client">As a Client you will be able to request Taxis for rides.</string>
    <string name="setting_up">Please wait a moment, we are setting up your account.</string>


    <!-- Side menu strings -->
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="instant">Instant Taxi</string>
    <string name="map_view">Map View</string>
    <string name="current_travel">Current Travel</string>
    <string name="scheduled_rides">Scheduled Rides</string>
    <!--<string name="drawer_open">Open drawer</string>-->
    <!--<string name="drawer_close">Close drawer</string>-->


    <!-- Taxi instant dialog -->
    <string name="instant_dialog_title">Confirm taxi</string>
    <string name="instant_dialog_msg">Would you like to be picked up at your current location by the closest available taxi below?</string>
    <string name="instant_dialog_positive">Another taxi</string>
    <string name="instant_dialog_negative">Yes</string>
    <string name="instant_dialog_title2">No more taxis</string>
    <string name="instant_dialog_msg2">Use the Map view function to look for more taxis sorted by proximity, rating or to check your favorites.</string>
    <string name="instant_dialog_positive2">Ok</string>


    <!-- Taxi chooser sort spinner -->
    <string name="closest_to_you">Closest to you</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="your_favorites">Your favorites</string>
    <string name="search">Search</string>


    <!-- Taxi ride setup strings -->
    <string name="not_found">Not found</string>
    <string name="here_and_now">Here &amp; Now</string>
    <string name="later">Later or at another location</string>
    <string name="set_origin">Set Origin</string>
    <string name="set_time">Set time</string>


    <!-- Wait for taxi strings -->
    <string name="your_scheduled_ride">Your scheduled ride:</string>
    <string name="see_more">See all your scheduled rides</string>
    <string name="your_scheduled_rides">Your sheduled rides:</string>
    <string name="wait_for_taxi">Done! Your taxi will arrive soon…</string>
    <string name="wait_for_taxi_suggestion">
        We will notify you when your taxi arrives.
        \nTip: You should now set the destination to get a move on once
        your taxi arrives!
    </string>
    <string name="set_destination">Set Destination</string>
    <string name="call_another_taxi">Call another taxi</string>
    <string name="insert_address">Insert address…</string>


    <!-- Payment strings -->
    <string name="submit">Submit</string>
    <string name="dont_rate">Don\'t rate</string>
    <string name="touch_to_instant">TOUCH TO FIND
THE NEAREST TAXI</string>


    <!-- Ride request strings -->
    <string name="logged_in_as_X">Logged in as</string>
    <string name="request_sent">Request sent…</string>
    <string name="x_requested">requested a ride.</string>
    <string name="x_requested_large">requested you a ride.</string>
    <string name="request_accepted">Request accepted.</string>
    <string name="request_declined">Request declined.</string>
    <string name="request_timed_out">Request timed out.</string>
    <string name="x_arrived">arrived.</string>
    <string name="x_arrived_large">arrived at the designated location.</string>
    <string name="scheduled_ride_was_cancelled">Scheduled ride was cancelled.</string>
    <string name="arrived_at_client">Arrived at client</string>
    <string name="arrived_at_dest">Arrived at dest.</string>


    <!-- Ride item strings -->
    <string name="confirm_delete">Are you sure you wish to cancel this ride?</string>


    <!-- Authentication strings -->
    <string name="authenticate_for_client">Please authenticate the taxi by placing your phone near the taxi\'s phone!</string>
    <string name="authenticate_for_taxi">Place phone near client\'s phone and press to start authentication!</string>
    <string name="start_authentication">Start authentication!</string>
    <string name="skip_authentication">Skip authentication!</string>
    <string name="skip_payment">Skip payment!</string>
    <string name="dialog_authentication_failed_title">Authentication failed!</string>
    <string name="dialog_authentication_failed_msg_taxi">Authentication with taxi failed! If the present taxi is in fact your taxi, please contact Travis support.</string>
    <string name="dialog_authentication_failed_msg_client">Authentication with client failed! If the present client is in fact your client, please contact Travis support.</string>


    <!-- Payment strings -->
    <string name="title_activity_main">NFC</string>
    <string name="title_activity_writetag">Write Tag</string>
    <string name="title_activity_readtag">Read Tag</string>
    <string name="title_activity_beam">Beam</string>
    <string name="text_button_writetag">Write Tag</string>
    <string name="text_button_readtag">Read Tag</string>
    <string name="text_button_beam">Beam</string>
    <string name="text_android">The Android</string>
    <string name="text_warning_nfc_is_off">NFC is currently turned off!</string>
    <string name="text_turn_on_nfc">This app cannot be used without NFC enabled. Please turn on NFC in the Settings and then use the back button to return to this app.</string>
    <string name="text_update_settings">Update Settings</string>
    <string name="insert_price_large">Please insert the price to send to the client.</string>
    <string name="insert_price">Insert a price here</string>
    <string name="pick_price">Tap here to pick a price</string>
    <string name="place_phone_near">Once done, place the client\'s phone near yours so that the price can be transferred.</string>
    <string name="travel_cost">Travel cost</string>

</resources>