<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">


    <View
        android:id="@+id/centerShim1"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_centerVertical="true"/>

    <View
        android:id="@+id/centerShim2"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100sp"/>

    <View
        android:id="@+id/centerShim3"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"/>

    <LinearLayout
        android:id="@+id/name_forms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_below="@id/centerShim2">
        <com.andreabaccega.widget.FormEditText
            whatever:testType="personName"
            android:id="@+id/firstname_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:ems="8"/>

        <com.andreabaccega.widget.FormEditText
            whatever:testType="personName"
            android:id="@+id/lastname_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:ems="8"/>
    </LinearLayout>


    <ImageView
        android:id="@+id/photo_holder"
        android:layout_width="70dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:ems="18"/>

    <Button
        android:id="@+id/photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@id/photo_holder"
        android:layout_marginLeft="20dp"
        android:hint="@string/pick_a_photo"
        android:layout_gravity="center"
        android:gravity="center"
        android:ems="18"
        android:onClick="onPickImageButtonClicked"/>


    <RadioGroup
        android:id="@+id/account_type_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center|top"
        android:layout_above="@id/centerShim3"
        android:ems="18"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taxi"
            android:id="@+id/radio_button_taxi"
            android:layout_margin="25dp"
            android:checked="false"
            android:textColor="@color/welcome_messages_text"
            android:enabled="true"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client"
            android:id="@+id/radio_button_client"
            android:layout_margin="25dp"
            android:checked="false"
            android:textColor="@color/welcome_messages_text"
            android:enabled="true"/>
    </RadioGroup>

    <!-- Welcome message 1 -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="1"
        android:layout_alignParentTop="true"
        android:gravity="left|center"
        android:textSize="19sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/sideMenuBgV2"
        android:text="@string/welcome_text1"/>


    <!-- Welcome message 2 -->
    <TextView
        android:id="@+id/welcome_text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="3"
        android:layout_above="@id/name_forms"
        android:gravity="center"
        android:textSize="17sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/welcome_messages_text"
        android:text="@string/welcome_text2"/>


    <!-- Welcome message 3 -->
    <TextView
        android:id="@+id/welcome_text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="3"
        android:layout_above="@id/photo_button"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textSize="17sp"
        android:textColor="@color/welcome_messages_text"
        android:text="@string/welcome_text3"/>


    <!-- Welcome message 4 -->
    <TextView
        android:id="@+id/welcome_text4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="2"
        android:layout_above="@id/centerShim3"
        android:layout_marginBottom="55dp"
        android:gravity="center"
        android:textSize="17sp"
        android:textColor="@color/welcome_messages_text"
        android:text="@string/welcome_text4"/>


    <com.beardedhen.androidbootstrap.BootstrapButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_using_travis"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/account_type_rg"
        bootstrapbutton:bb_type="success"
        bootstrapbutton:bb_roundedCorners="true"
        bootstrapbutton:bb_size="large"
        android:onClick="register"/>

</RelativeLayout>