<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="?attr/actionBarSize"
              android:background="@android:color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/insert_price_large"
        android:id="@+id/textView" android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/price_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/price_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/pick_price"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/place_phone_near"/>

</LinearLayout>