<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    xmlns:whatever="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <!-- Welcome message 1 -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:gravity="left|center"
            android:textSize="26sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/sideMenuBgV2"
            android:text="@string/welcome_text1"/>


        <!-- Welcome message 2 -->
        <TextView
            android:id="@+id/welcome_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="23sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/welcome_messages_text"
            android:text="@string/welcome_text2"/>

        </LinearLayout>

    <View
        android:id="@+id/center_shim"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_centerVertical="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginTop="-40dp"
        android:orientation="vertical"
        android:layout_below="@id/center_shim">

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/field_first_name"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            bootstrapbutton:be_roundedCorners="true"
            android:gravity="center"
            bootstrapbutton:be_state=""
            whatever:testType="personName"
            android:hint="@string/first_name"
            android:ems="15"
            android:textSize="20sp"/>

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/field_last_name"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            bootstrapbutton:be_roundedCorners="true"
            android:gravity="center"
            bootstrapbutton:be_state=""
            whatever:testType="personName"
            android:hint="@string/last_name"
            android:ems="15"
            android:textSize="20sp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/img_dots_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:src="@drawable/img_dots_1" />

    <ImageView
        android:id="@+id/first_next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:src="@drawable/circle_arrow_next" />

</RelativeLayout>