<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
              xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
              android:id="@+id/wait_for_taxi_info"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:paddingBottom="10dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:tools="http://schemas.android.com/tools"
                  xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
                  xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <com.beardedhen.androidbootstrap.FontAwesomeText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            fontawesometext:fa_icon="fa-check"
            android:textColor="@color/taxi_available_bg"
            android:paddingTop="20dp"
            android:paddingLeft="15dp"
            android:textSize="45sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingLeft="12dp"
            android:paddingRight="32dp"
            android:textSize="28sp"
            android:text="@string/wait_for_taxi"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:padding="15dp"
        android:textSize="16sp"
        android:text="@string/wait_for_taxi_suggestion"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >

        <!-- An invisible view aligned to the center of the parent. Allows other
        views to be arranged on either side -->
        <View
            android:id="@+id/centerShim"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:visibility="invisible"
            android:layout_centerHorizontal="true"/>

        <!--Set width to match_parent sets maximum width. alignParentLeft aligns
        the left edge of this view withUser the left edge of its parent. toLeftOf
        sets the right edge of this view to align withUser the left edge of the
        given view. The result of all three settings is that this view will
        always take up exactly half of the width of its parent, however wide
        that may be. -->
        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/centerShim"
            android:paddingRight="10dp"
            android:text="@string/set_destination"
            android:textSize="15sp"
            bootstrapbutton:bb_icon_left="fa-location-arrow"
            bootstrapbutton:bb_type="danger"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_size="normal"
            android:onClick="onDestinationButtonClicked"/>

        <!--Same deal, but on the right -->
        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btAnother"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/centerShim"
            android:paddingLeft="10dp"
            android:text="@string/call_another_taxi"
            android:textSize="15sp"
            bootstrapbutton:bb_icon_left="fa-repeat"
            bootstrapbutton:bb_type="default"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_size="normal"
            android:onClick="onAnotherTaxiButtonClicked" />
    </RelativeLayout>

</LinearLayout>