<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <RelativeLayout
        android:id="@+id/sliding_pane_options_buttons"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <View
            android:id="@+id/button_center_shim"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:visibility="invisible"
            android:layout_centerHorizontal="true"/>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btDone"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_toLeftOf="@id/button_center_shim"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:text="@string/done"
            android:textSize="15sp"
            bootstrapbutton:bb_icon_left="\uf00c"
            bootstrapbutton:bb_type="success"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_size="normal"
            android:onClick="onDoneButtonClicked"/>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btCancel"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/button_center_shim"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:text="@string/cancel"
            android:textSize="15sp"
            bootstrapbutton:bb_icon_left="\uf00d"
            bootstrapbutton:bb_type="danger"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_size="normal"
            android:onClick="onCancelButtonClicked"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clickable="false"
        android:layout_above="@id/sliding_pane_options_buttons" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:background="@color/selectorBg"/>

        <View
            android:id="@+id/pane_center_shim"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:visibility="invisible"
            android:layout_centerVertical="true"/>

        <View
            android:id="@+id/pane_center_shim2"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:visibility="invisible"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="130dp"/>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/time_picker"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_above="@id/pane_center_shim"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@id/pane_center_shim2"
            android:layout_margin="10dp"
            android:text="@string/set_time"
            android:textSize="15sp"
            bootstrapbutton:bb_type="default"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_size="normal"
            android:onClick="onTimePickerClicked"/>

        <TextView
            android:id="@+id/time_picker_text"
            android:layout_width="400dp"
            android:layout_height="120dp"
            android:layout_toRightOf="@id/pane_center_shim2"
            android:layout_above="@id/pane_center_shim"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textAlignment="center"
            android:textSize="19sp"
            android:singleLine="true"
            android:gravity="center"/>

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/btOrigin"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentLeft="true"
            android:layout_alignRight="@id/pane_center_shim2"
            android:layout_below="@id/pane_center_shim"
            android:layout_alignParentBottom="true"
            android:layout_margin="10dp"
            android:text="@string/set_origin"
            android:textSize="15sp"
            bootstrapbutton:bb_type="default"
            bootstrapbutton:bb_roundedCorners="true"
            bootstrapbutton:bb_size="normal"
            android:onClick="onOriginButtonClicked"/>

        <TextView
            android:id="@+id/origin_address"
            android:layout_width="400dp"
            android:layout_height="120dp"
            android:layout_toRightOf="@id/pane_center_shim2"
            android:layout_below="@id/pane_center_shim"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textAlignment="center"
            android:textSize="19sp"
            android:maxLines="3"
            android:gravity="center"/>

    </RelativeLayout>

</RelativeLayout>